Adds manual testing instructions in DG.

--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -1722,6 +1722,9 @@ Leo responds with the details of the transaction that is a spending.
 Expected: Leo responds with a message indicating that the person is not a valid member.
 Transaction is not added.
 
+.. Other incorrect Delete commands to try: [blue]`add`, [blue]`add p/Alex Yeoh` +
+Expected: Leo responds with error and no transaction is added.
+
 . Deleting transactions
 
 .. Prerequisites: There are at least one transaction at all times in the Home tab and
@@ -1734,9 +1737,14 @@ Leo responds with the number of transactions deleted.
 Expected: Transaction at ID 1 is deleted.
 Leo responds with details of the transaction deleted.
 
-.. Other incorrect Delete commands to try: `delete x` (where x is more than the last ID
+.. Test case 2: [blue]`delete 0` +
+Expected: No Transaction is deleted.
+Leo responds with details of the invalid index inputted.
+
+.. Other incorrect Delete commands to try: [blue]`delete`, `delete x` (where x is more than the last ID
 in the table), [blue]`delete p/Jack` (Jack is not linked
-to any transactions).
+to any transactions) +
+Expected: Leo responds with error and no transaction is deleted.
 
 . Editing transactions
 
@@ -1749,9 +1757,10 @@ Leo responds with the details of the transaction edited that is a spending.
 Expected: The transaction with ID 1 is edited with the specified parameters.
 Leo responds with the details of the transaction edited that is an earning.
 
-.. Other incorrect Edit commands to try: `edit x a/12` (where x is more than the last ID
+.. Other incorrect Edit commands to try: [blue]`edit`, `edit x a/12` (where x is more than the last ID
 in the table), [blue]`edit 1 p/Jack` (Jack is not linked
-to any transactions).
+to any transactions) +
+Expected: Leo responds with error and no transaction is edited.
 
 . Finding transactions
 
@@ -1791,35 +1800,60 @@ recent.
 
 . Adding a person
 
-.. Test case: `` +
-Expected: First contact is deleted from the list.
-
-
-
+.. Test case 1: [blue]`add n/John Doe p/98765432 e/johnd@example.com a/John street, block 123, #01-01` +
+Expected: Person with specified parameters are added into the list.
 
 . Deleting a person while all persons are listed
 
 .. Prerequisites: List all persons using the `list` command.
 Multiple persons in the list.
-.. Test case: `delete 1` +
+.. Test case 1: [blue]`delete 1` +
 Expected: First contact is deleted from the list.
 Details of the deleted contact shown in the status message.
 Timestamp in the status bar is updated.
-.. Test case: `delete 0` +
+.. Test case 2: [blue]`delete 0` +
 Expected: No person is deleted.
 Error details shown in the status message.
 Status bar remains the same.
-.. Other incorrect delete commands to try: `delete`, `delete x` (where x is larger than the list size) _{give more}_ +
+.. Other incorrect delete commands to try: [blue]`delete`, `delete x` (where x is larger than the list size) _{give more}_ +
 Expected: Similar to previous.
 
+. Deleting a person when it has a transaction record
 
-=== Saving data
+.. Prerequisites: The person in the list to be deleted to have transaction records in
+the Home tab.
+.. Test case 1: `delete ID` (where ID is the index of the person with a linked transaction) +
+Expected: Unable to delete the person.
 
-. Dealing with missing/corrupted data files
+. Editing a person
 
-.. _{explain how to simulate a missing/corrupted file and the expected behavior}_
+.. Prerequisites: There is at least one person in the list.
+. Test case 1: [blue]`edit 1 p/91234567 e/johndoe@example.com` +
+Expected: The person at the index of 1 is edited with the specified parameters.
+. Test case 2: [blue]`edit 1` +
+Expected: Nothing is edited and Leo responds to inform of this.
+. Test case 3: [blue]`edit 0 p/91234567 e/johndoe@example.com` +
+Expected: No person is edited and Leo responds to inform of this.
+.. Other incorrect delete commands to try: [blue]`edit`, `edit x` (where x is larger than the list size) +
+Expected: Similar to previous.
 
-_{ more test cases ... }_
+. Finding a person
+
+.. Prerequisites: There are a few people at all times in the Members tab. 'Alex Yeoh' and 'Alex Low'
+are present in the list.
+.. Test case 1: [blue]`find alex` +
+Expected: 'Alex Yeoh' and 'Alex Low' are shown.
+Leo responds with the number of matching person.
+
+.. Test case 2a: [blue]`find alex yeoh` +
+Expected: The person 'Alex Yeoh' is shown.
+Leo responds with the number of matching person.
+
+.. Test case 2b: Any other subsequent commands except Add command +
+Expected: The person 'Alex Yeoh' is shown and the commands are carried out
+according to the filtered table.
+.. Test case 2c: Type [blue]`list` +
+Expected: The full list of people are shown.
 
 === Testing Reimbursements Tab Features
 
@@ -1829,3 +1863,15 @@ _{ more test cases ... }_
 
 === Testing Overview Tab Features
 
+=== Saving data
+
+. Dealing with missing/corrupted data files
+
+.. Prerequisites: There is existing data in the various data files.
+.. Before the application is open, corrupt some of the text files by deleting parts of it. +
+Then, open the application. +
+Expected: If the transactionHistory.txt file is changed, the Home and Reimbursements tab will start with an empty
+table. If the inventoryInformation.txt file is changed, the Inventory tab will start with an empty
+table. If the mytasks.txt and tasks.txt files are changed, the Overview tab lose the notification reminders
+set. If the addressbook.json is changed, the sample address book data would be populated in the Members tab.
+Changing the reimbursementInformation should not cause any issues.
