--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -363,12 +363,20 @@ Clears all existing actors of the 2nd show in the list.
 Note: Search results will appear in the Search Page, click kbd:[3] to go straight to the search page.
 ====
 
-Searches for shows whose names contain any of the given keywords from the watchlist, watched list and online. +
+Searches for shows whose names contain any of the given keywords from the watchlist, watched list and online/internal
+database. +
+
 Format:
 
-* by name: `search n/SHOW_NAME... [g/GENRE]... [a/ACTOR_NAME]... [o/FROM_ONLINE] [t/TYPE] [w/HAS_WATCHED]`
-* by genre: `search g/GENRE... [n/SHOW_NAME]... [a/ACTOR_NAME]... [o/FROM_ONLINE] [t/TYPE] [w/HAS_WATCHED]`
-* by actor (from watchlist): `search a/ACTOR_NAME... [n/SHOW_NAME]... [g/GENRE]... [t/TYPE] [w/HAS_WATCHED]`
+* by name: +
+`search n/SHOW_NAME... [g/GENRE]... [a/ACTOR_NAME]... [o/FROM_ONLINE] [t/TYPE] [w/HAS_WATCHED]`
+
+* by genre: +
+`search g/GENRE... [n/SHOW_NAME]... [a/ACTOR_NAME]... [o/FROM_ONLINE] [t/TYPE] [w/HAS_WATCHED]`
+
+* by actor (from watchlist/internal database): +
+`search a/ACTOR_NAME... [n/SHOW_NAME]... [g/GENRE]... [o/FROM_ONLINE] [t/TYPE] [w/HAS_WATCHED]`
+
 
 ****
 * The search is case insensitive. e.g "avengers" will match "Avengers"
